# mypythonsandobox

./: .gitignore  .tools.template  README.md  requirements-test.txt  requirements.txt  setup.cfg  setup.py
com/skadyan/: __init__.py  coreutils.py
devtools/: create-venv.cmd  shared.cmd  update-dependencies.cmd
tests/com/skadyan/: test_coreutils.py
