[flake8]
ignore = D203
exclude = .git, __pycache__, venv, resources, build, dist, target

max-complexity = 10
format = html
htmldir = target/flake-reports
[bdist_wheel]
universal = 1


[tool:pytest]
addopts = --cov=com --cov-report html --cov-report term
cache_dir = target/.pytest_cache

env = D:HOME=~/tmp
      APP_ENV=unittest

[coverage:run]
data_file = target/.coverage

[coverage:report]
exclude_lines = pass

skip_covered = false
fail_under : 75.0

[coverage:html]
directory = target/coverage-reports

[coverage:xml]
output = target/coverage.xml



[metadata]
name = MyPythonSandbox
version = attr: com.skadyan.VERSION
description = Data Ingestion Framework to ingest multiple kind of data into data lake
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = ingestion,datalake, bigdata
license = Proprietary
classifiers = Framework :: Flask
              Programming Language :: Python :: 3.6
              Development Status :: 3 - Alpha
              Framework :: Flake8
              Framework :: Pytest
              Framework :: SQLAlchmy
              Programming Language :: Java
              Programming Language :: Perl
              Programming Language :: SQL
              Programming Language :: Unix Shell
              Topic :: Text Processing :: Markup :: XML
              Topic :: Text Processing :: Markup :: JSON
              Topic :: Text Processing :: Markup :: YAML


